--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #D1E0F7;
+    background-color: white;
     bottom: 0;
     color: #444444;
     font-family: sans-serif;
@@ -21,7 +21,6 @@ body {
     position: relative;
 }
 #header .label {
-    background-color: #D1E0F7;
     color: #444444;
     display: block;
     font-size: 13px;
@@ -30,13 +29,26 @@ body {
 #header .select_container {
     margin: 0 0 5px;
 }
+
+select:focus {
+    box-shadow: 0 0 7px rgb(140, 200, 255);
+    border-color: rgb(0, 133, 255);
+}
+select{
+    background: white;
+    border: solid 1px rgba(0,0,0,0.2);
+    border-radius: 3px;
+    outline: none;
+}
 #header div.search {
     background: none repeat scroll 0 0 white;
-    border: 1px solid #809DCD;
+    border: 1px solid rgba(0,0,0,0.2);
     display: inline;
+    border-radius: 2px;
     overflow: hidden;
     position: relative;
-    width: 100%;
+    width: 50%;
+    margin-right: 5px;
 }
 #header input.search {
     background: none repeat scroll 0 0 white;
@@ -48,23 +60,31 @@ body {
     padding: 0;
     position: relative;
     width: 85%;
+    outline: none;
+}
+#header .search_button:active {
+    box-shadow: inset 1px 1px 2px !important;   
 }
 #header .search_button {
-    background: url("../img/button.png") repeat-x scroll 0 0 #EEEEEE;
-    border: 1px solid #809DCD;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: white;
+    border: 1px solid rgba(0,0,0,0.2);
     color: #444444;
     cursor: pointer;
     display: inline;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 5px;
     font-family: sans-serif;
     font-size: small;
-    height: 18px;
-    line-height: 18px;
-    padding: 0 5px;
-    text-align: center;
+    margin: 1px 0 5px;
+    box-shadow: 1px 1px 2px;
 }
 #list {
     background-color: #FFFFFF;
-    border: 1px solid #809DCD;
+    border: 1px solid rgba(0,0,0,0.3);
     border-radius: 3px 3px 3px 3px;
     display: block;
     height: 110px;
@@ -76,7 +96,7 @@ body {
     position: relative;
 }
 #list .feature {
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
     border-top: 1px solid transparent;
     cursor: pointer;
     display: block;
@@ -87,16 +107,16 @@ body {
     width: 100%;
 }
 #list .selected {
-    background: none repeat scroll 0 0 #D1E0F7;
-    border-bottom: 1px dashed #809DCD;
-    border-top: 1px dashed #809DCD;
+    background: none repeat scroll 0 0 rgba(0,0,0,0.1);
+    border-bottom: 1px dashed rgba(0,0,0,0.2);
+    border-top: 1px dashed rgba(0,0,0,0.2);
 }
 #list .highlight {
-    background: none repeat scroll 0 0 #B6DAFB;
+    background: none repeat scroll 0 0 rgba(0,0,0,0.1);
 }
 #info {
     background-color: #FFFFFF;
-    border: 1px solid #809DCD;
+    border: 1px solid rgba(0,0,0,0.3);
     border-radius: 3px 3px 3px 8px;
     display: block;
     margin: 5px 3px 3px;
@@ -164,7 +184,7 @@ body {
     content: "· ";
 }
 .featureHead {
-    background-color: #C3C3C3;
+    background-color:  rgba(0,0,0,0.1);;
 }
 .featureFieldsContainer {
     margin-left: 4px;
@@ -176,8 +196,8 @@ body {
     margin-top: 0px;
 }
 .hidden {
-   display: none;
-   visibility: hidden;
+    display: none;
+    visibility: hidden;
 }
 .attribute {
     background-color: #E2E2E2;
@@ -186,5 +206,5 @@ body {
     margin-left: 4px;
 }
 .styled_select > div > .text {
-  display: none;
+    display: none;
 }
