--- a/css/default.css
+++ b/css/default.css
@@ -42,7 +42,6 @@ select{
 }
 #header div.search {
     background: none repeat scroll 0 0 white;
-    border: 1px solid rgba(0,0,0,0.2);
     display: inline;
     border-radius: 2px;
     overflow: hidden;
@@ -52,7 +51,7 @@ select{
 }
 #header input.search {
     background: none repeat scroll 0 0 white;
-    border: medium none;
+    border: solid 1px rgba(0,0,0,0.2);
     color: #444444;
     display: inline;
     font-size: small;
